html structure defined and css of body has written

--- a/responsive_webdesign/survey_form.html
+++ b/responsive_webdesign/survey_form.html
@@ -2,6 +2,23 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Watercolor Studio</title>
+		<title>Watercolor Studio Survey Form</title>
+		<link rel="stylesheet" href="styles.css"/>
 	</head>
+	<body>
+		<h1 id="title">Watercolor Studio Survey Form</h1>
+		<p id="description">Please provide a brief information to leave your 
+		feedback</p>
+		<form id="survey-form">
+			<fieldset>
+				<label>Name</label>
+				<label>Email</label>
+				<label>Number</label>
+			</fieldset>
+			<fieldset></fieldset>
+			<fieldset></fieldset>
+
+
+		</form>
+	</body>
 </html>
