--- a/responsive_webdesign/survey_form.html
+++ b/responsive_webdesign/survey_form.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
+		<head>
 		<meta charset="UTF-8">
 		<title>Watercolor Studio Survey Form</title>
 		<link rel="stylesheet" href="styles.css"/>
@@ -11,9 +11,9 @@
 		feedback</p>
 		<form id="survey-form">
 			<fieldset>
-				<label>Name</label>
-				<label>Email</label>
-				<label>Number</label>
+				<label>Name<input id="name" type="text"/></label>
+				<label>Email<input id=="email" /></label>
+				<label>Number<input id="number"/></label>
 			</fieldset>
 			<fieldset></fieldset>
 			<fieldset></fieldset>
