added types and required to the inputs and added submit

--- a/responsive_webdesign/survey_form.html
+++ b/responsive_webdesign/survey_form.html
@@ -3,7 +3,7 @@
 		<head>
 		<meta charset="UTF-8">
 		<title>Watercolor Studio Survey Form</title>
-		<link rel="stylesheet" href="styles.css"/>
+		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
 		<h1 id="title">Watercolor Studio Survey Form</h1>
@@ -11,14 +11,14 @@
 		feedback</p>
 		<form id="survey-form">
 			<fieldset>
-				<label>Name<input id="name" type="text"/></label>
-				<label>Email<input id=="email" /></label>
-				<label>Number<input id="number"/></label>
+				<label>Name<input id="name" type="text" required></label>
+				<label>Email<input id="email" type="email" required></label>
+				<label>Number<input id="number" type="number"></label>
 			</fieldset>
 			<fieldset></fieldset>
 			<fieldset></fieldset>
 
-
+			<input type="submit" value="Submit">
 		</form>
 	</body>
 </html>
