added min max in the number input and id for all of the labels

--- a/responsive_webdesign/survey_form.html
+++ b/responsive_webdesign/survey_form.html
@@ -11,9 +11,10 @@
 		feedback</p>
 		<form id="survey-form">
 			<fieldset>
-				<label>Name<input id="name" type="text" required></label>
-				<label>Email<input id="email" type="email" required></label>
-				<label>Number<input id="number" type="number"></label>
+				<label id="name-label">Name<input id="name" type="text" required></label>
+				<label id="email-label">Email<input id="email" type="email" required></label>
+				<label id="number-label">Number<input id="number" type="number" min="8" 
+				max="12"></label>
 			</fieldset>
 			<fieldset></fieldset>
 			<fieldset></fieldset>
