radio buttons added

--- a/responsive_webdesign/survey_form.html
+++ b/responsive_webdesign/survey_form.html
@@ -11,12 +11,16 @@
 		feedback</p>
 		<form id="survey-form">
 			<fieldset>
-				<label id="name-label">Name<input id="name" type="text" required></label>
-				<label id="email-label">Email<input id="email" type="email" required></label>
-				<label id="number-label">Number<input id="number" type="number" min="8" 
+				<label id="name-label">Name <input id="name" type="text" required></label>
+				<label id="email-label">Email <input id="email" type="email" required></label>
+				<label id="number-label">Number <input id="number" type="number" min="8" 
 				max="12"></label>
 			</fieldset>
-			<fieldset></fieldset>
+			<fieldset>
+				<label><input type="radio"> In a group people of five</label>
+				<label><input type="radio"> Personal</label>
+				<label><input type="radio"> Not required</label>
+			</fieldset>
 			<fieldset></fieldset>
 
 			<input type="submit" value="Submit">
