dropdown list added

--- a/responsive_webdesign/survey_form.html
+++ b/responsive_webdesign/survey_form.html
@@ -17,9 +17,17 @@
 				max="12"></label>
 			</fieldset>
 			<fieldset>
-				<label><input type="radio"> In a group people of five</label>
-				<label><input type="radio"> Personal</label>
-				<label><input type="radio"> Not required</label>
+				<legend>Would you like to subscrube to our courses (required)</legend>
+				<label for="group"><input id ="group" type="radio" name="course-enrollment" checked > In a group people of five</label>
+				<label for="individual"><input id="individual" type="radio" name="course-enrollment"> Individual</label>
+				<label for="not-required"><input id="not-reqired" type="radio" name="course-enrollment"> Not required</label>
+				<label>How did you know about our studio?</label>
+					<select>
+						<option>Through the internet surfing</option>
+						<option>Watch an add</option>
+						<option>Friends recommendations</option>
+						<option>Other</option>
+					</select>
 			</fieldset>
 			<fieldset></fieldset>
 
