id=dropdown added to the select element

--- a/responsive_webdesign/survey_form.html
+++ b/responsive_webdesign/survey_form.html
@@ -22,7 +22,7 @@
 				<label for="individual"><input id="individual" type="radio" name="course-enrollment"> Individual</label>
 				<label for="not-required"><input id="not-reqired" type="radio" name="course-enrollment"> Not required</label>
 				<label>How did you know about our studio?</label>
-					<select>
+					<select id="dropdown">
 						<option>Through the internet surfing</option>
 						<option>Watch an add</option>
 						<option>Friends recommendations</option>
